--- a/jblog-struts/pom.xml
+++ b/jblog-struts/pom.xml
@@ -17,6 +17,14 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.struts</groupId>
+            <artifactId>struts2-core</artifactId>
+            <version>2.3.16.3</version>
+        </dependency>
+
+
     </dependencies>
     <build>
         <finalName>jblog-struts</finalName>
